--- a/ReflectionHydration/ReflectionHydration.csproj
+++ b/ReflectionHydration/ReflectionHydration.csproj
@@ -2,16 +2,16 @@
 
     <PropertyGroup>
         <OutputType>Exe</OutputType>
-        <TargetFramework>net7.0</TargetFramework>
+        <TargetFramework>net6.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <LangVersion>11</LangVersion>
     </PropertyGroup>
 
     <ItemGroup>
         <PackageReference Include="BenchmarkDotNet" Version="0.13.2" />
         <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
         <PackageReference Include="Microsoft.Extensions.Logging" Version="7.0.0" />
-        <PackageReference Include="Neo4j.Driver" Version="5.2.0" />
         <PackageReference Include="Serilog" Version="2.12.0" />
         <PackageReference Include="Serilog.Extensions.Logging" Version="3.1.1-dev-10301" />
         <PackageReference Include="Serilog.Sinks.Console" Version="4.1.0" />
@@ -20,6 +20,10 @@
     <ItemGroup>
       <Compile Remove="Hydration\Abstractions\IReflectionHydrator.cs" />
       <Compile Remove="Hydration\Implementation\ReflectionHydrator.cs" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\..\neo4j-dotnet-driver\Neo4j.Driver\Neo4j.Driver\Neo4j.Driver.csproj" />
     </ItemGroup>
 
 </Project>
