--- a/TelemetryTest/TelemetryTest.csproj
+++ b/TelemetryTest/TelemetryTest.csproj
@@ -13,6 +13,7 @@
 
     <ItemGroup>
       <PackageReference Include="Serilog" Version="3.0.1" />
+      <PackageReference Include="Serilog.Expressions" Version="3.4.1" />
       <PackageReference Include="Serilog.Sinks.Console" Version="4.1.0" />
     </ItemGroup>
 
